force-app/main/default/objects/SharinPix_Deleted_Images__c/SharinPix_Deleted_Images__c.object-meta.xml
<CustomObject>
    <label>SharinPix Deleted Images</label>
    <nameField>
        <displayFormat>SDI-{0000}</displayFormat>
        <label>SharinPix Deleted Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SharinPix Deleted Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>