force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Album_ID__c.field-meta.xml
<CustomField>
    <fullName>Album_ID__c</fullName>
    <label>Album ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>