force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Converted_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Converted_Image_URL__c</fullName>
    <label>Converted Image URL</label>
    <type>Url</type>
</CustomField>