force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Date_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded__c</fullName>
    <label>Date Uploaded</label>
    <type>DateTime</type>
</CustomField>