force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Google_Drive_ID_Original__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_ID_Original__c</fullName>
    <label>Google Drive ID - Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>