force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Image_URL_Full__c.field-meta.xml
<CustomField>
    <fullName>Image_URL_Full__c</fullName>
    <label>Image URL Full</label>
    <type>Url</type>
</CustomField>