force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Image_URL_Original__c.field-meta.xml
<CustomField>
    <fullName>Image_URL_Original__c</fullName>
    <label>Image URL Original</label>
    <type>Url</type>
</CustomField>