force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>SharinPix Deleted Images</relationshipLabel>
    <relationshipName>SharinPix_Deleted_Images</relationshipName>
    <type>Lookup</type>
</CustomField>