force-app/main/default/objects/SharinPix_Deleted_Images__c/fields/Old_SharinPix_record_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_SharinPix_record_ID__c</fullName>
    <label>Old SharinPix record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>