force-app/main/default/objects/SharinPix_Deleted_Images__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Album_ID__c</columns>
    <columns>File_Name__c</columns>
    <columns>Date_Uploaded__c</columns>
    <columns>Job__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>